add api collection
