# swagger/v1/swagger.yaml
@@ -765,6 +765,31 @@ paths:
                   - status
                   - created_at
                   - updated_at
+    post:
+      summary: Create a new service order
+      tags:
+      - Service Orders
+      security:
+      - bearerAuth: []
+      parameters: []
+      responses:
+        '201':
+          description: service order created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                customer_id:
+                  type: integer
+                vehicle_id:
+                  type: integer
+              required:
+              - customer_id
+              - vehicle_id
   "/service_orders/{id}/add_services":
     post:
       summary: Add services to a service order
